[Cleanup] Modernize deprecated java.util.Locale constructor calls with Java 21 Locale.of()